@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Fixed
 - [API_PARSER] [UBIKA] Avoid concurrent runs of collector
+- [API_PARSER] [GATEWATCHER_ALERTS] Avoid collect getting stuck when delay is over 24h
 
 
 ## [2.34.0] - 2025-11-10
